[package]
edition = "2021"
name = "fastcdc-diff"
version = "0.0.4"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayref = "0.3.7"
blake3 = "1.5.1"
fastcdc = { version = "3.1.0" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
rand = "0.8.5"
serde_json = "1.0.117"
anyhow = "1.0.86"
reqwest = { version = "0.12.4" }
tempfile = "3.10.1"
futures = "0.3.30"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.102", features = ["vendored"] }
